tests/fixtures/invalid/float_3_args.py
# float() takes at most 1 argument, got 3
x = float(1, 1, 1)
